basic styles and overflow fix

--- a/src/assets/scss/_elements.scss
+++ b/src/assets/scss/_elements.scss
@@ -7,3 +7,7 @@
   transform: translateX(0) !important;
   transition: all ease 0.5s;
 }
+
+.remove {
+  display: none;
+}
